--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,16 +35,8 @@
                     android:layout_weight="1"
                     android:text="@string/app_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:textColor="@color/grey_10"
+                    android:textColor="@color/bewatchColour"
                     android:textStyle="bold" />
-
-                <ImageButton
-                    android:id="@+id/bt_about"
-                    android:layout_width="?attr/actionBarSize"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:tint="@color/grey_20"
-                    app:srcCompat="@drawable/ic_error_outline" />
 
                 <View
                     android:layout_width="@dimen/spacing_medium"
@@ -63,10 +55,9 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:tint="@color/colorPrimary"
-                    app:srcCompat="@drawable/logo" />
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:srcCompat="@drawable/bewatch_logo_small" />
 
             </LinearLayout>
 
